--- a/index.html
+++ b/index.html
@@ -7,8 +7,9 @@
         <link rel="stylesheet" href="./style.css">
         <title>Persistindo array de objetos</title>
     </head>
-
     <body>
+        <h1>Doooing</h1>
+        <input type="text" placeholder="Writer my task...">
         <script src="./script.js"></script>        
     </body>
 </html>
